--- a/index.html
+++ b/index.html
@@ -313,11 +313,11 @@
       </div>
       <div id="mapWrap"><div id="map"></div></div>
       <div style="margin-top:8px;display:flex;gap:8px;flex-wrap:wrap">
-        <span class="pill"><i class="fa-solid fa-store"></i> Loja: Pituba, Salvador-BA</span>
-        <span class="pill" id="mapStatus">📍 Loja fixa • Toque para usar sua localização</span>
+        <span class="pill"><i class="fa-solid fa-store"></i> Loja: Barreiras-BA</span>
+        <span class="pill" id="mapStatus">📍 Calcule a rota</span>
       </div>
       <div style="display:flex;gap:8px;margin-top:8px">
-        <button class="btn" id="btnUseLoc"><i class="fa-solid fa-person-walking"></i> Usar minha localização</button>
+        <button class="btn" id="btnUseLoc"><i class="fa-solid fa-person-walking"></i> Ver rota</button>
         <button class="btn secondary" id="btnClearRoute"><i class="fa-solid fa-route"></i> Remover rota</button>
       </div>
     </dialog>
